[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/IndieFlower-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Chivo-Light.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 101
outline_size = 1
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 85
outline_size = 1
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 85
outline_size = 1
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 204
outline_size = 5
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 288, 512 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 574.0
margin_bottom = 1024.0

[node name="Start" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.522
anchor_right = 0.5
anchor_bottom = 0.522
margin_left = -143.0
margin_top = -127.528
margin_right = 157.0
margin_bottom = 10.472
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.847059, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
custom_constants/hseparation = 5
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Start"
flat = true

[node name="Instructions" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.0
margin_top = 23.0
margin_right = 232.0
margin_bottom = 161.0
focus_mode = 0
custom_colors/font_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Instructions"
flat = true

[node name="Exit" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 148.0
margin_right = 150.0
margin_bottom = 248.0
focus_mode = 0
custom_colors/font_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Exit"
flat = true

[node name="Title" type="Label" parent="."]
margin_left = 142.0
margin_top = 101.0
margin_right = 642.0
margin_bottom = 394.0
rect_scale = Vector2( 0.997935, 0.969413 )
custom_fonts/font = SubResource( 4 )
text = "XoX"

[connection signal="tree_exited" from="." to="." method="_on_Menu_tree_exited"]
[connection signal="pressed" from="Control/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Control/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
